[package]
name = "game_archive"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
nix = {version="0.30.1", features=["process", "signal"]}
rocket =  {version="0.5.1", features=["json"]}
serde = "1.0.219"
rusqlite = { version = "0.37.0", features = ["bundled"] }
uuid = { version="1.18.0", features = ["v4"] }
tokio = "1.47.1"
