[package]
name = "game_archive"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
nix = {version="0.30.1", features=["process", "signal"]}
rocket =  {version="0.5.1", features=["json"]}
rocket_db_pools = { version = "0.2.0", features = [ "sqlx_sqlite" ]}
sqlx = { version = "0.7.0", features = [ "runtime-tokio", "sqlite" ] }
serde = "1.0.219"
uuid = { version="1.18.0", features = ["v4"] }
tokio = { version = "1.47.1", features = [ "process" ] }
